# sap-automate

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  scheduler.toml
.github/workflows/: ci.yml  release.yml
apps/sample-client/: Cargo.toml
apps/sample-client/src/: main.rs
apps/sample-server/: Cargo.toml
apps/sample-server/src/: main.rs
apps/sap-automate-bench/: Cargo.toml
apps/sap-automate-bench/src/: main.rs
apps/sap-automate-gw/: Cargo.toml
apps/sap-automate-gw/src/: main.rs
apps/sap-automate-ingest/: Cargo.toml
apps/sap-automate-ingest/src/: main.rs
apps/sap-automate-server/: Cargo.toml
apps/sap-automate-server/src/: context.rs  lib.rs  main.rs  prompts.rs  resources.rs  seed.rs  tools.rs
apps/sap-automate-server/tests/: audit_writes.rs  business_partner.rs  cache_tools.rs  kb_navigate.rs  live_adt.rs  spec_utilities.rs
apps/sap-automate-tui/: Cargo.toml
apps/sap-automate-tui/src/: app.rs  main.rs  traffic.rs  ui.rs
apps/sap-automate-tui/src/tabs/: kb.rs  logs.rs  mod.rs  rag.rs  sessions.rs  tools.rs
apps/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/scripts/: screenshot-graph.mjs  screenshot.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/mcp/: route.ts
apps/web/src/app/graph/: page.tsx
apps/web/src/app/query-lab/: page.tsx
apps/web/src/app/resources/: page.tsx
apps/web/src/app/skills/: page.tsx
apps/web/src/app/tools/: page.tsx
apps/web/src/components/: badge.tsx  sidebar.tsx
apps/web/src/lib/: mcp.ts
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: lib.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: error.rs  jsonrpc.rs  lib.rs  protocol.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: elicit.rs  lib.rs  registry.rs  server.rs
crates/mcp-server/tests/: integration.rs
crates/mcp-transport/: Cargo.toml
crates/mcp-transport/src/: http.rs  lib.rs  stdio.rs
crates/sap-automate-adt/: Cargo.toml
crates/sap-automate-adt/src/: client.rs  destination.rs  error.rs  http.rs  lib.rs  mock.rs  types.rs
crates/sap-automate-adt/tests/: http_integration.rs
crates/sap-automate-channels/: Cargo.toml
crates/sap-automate-channels/src/: lib.rs
crates/sap-automate-connectors/: Cargo.toml
crates/sap-automate-connectors/src/: lib.rs
crates/sap-automate-graph/: Cargo.toml
crates/sap-automate-graph/src/: community.rs  entity.rs  lib.rs  ppr.rs  raptor.rs  store.rs
crates/sap-automate-ingest/: Cargo.toml
crates/sap-automate-ingest/src/: chunker.rs  crawler.rs  embed.rs  fit_markdown.rs  lib.rs  pipeline.rs  rate_limit.rs  robots.rs
crates/sap-automate-kb/: Cargo.toml
crates/sap-automate-kb/src/: doc_tree.rs  lib.rs  qdrant.rs  schema.rs  store.rs
crates/sap-automate-memory/: Cargo.toml
crates/sap-automate-memory/src/: lib.rs
crates/sap-automate-observability/: Cargo.toml
crates/sap-automate-observability/src/: audit.rs  lib.rs  metrics.rs  tracing_init.rs
crates/sap-automate-rag/: Cargo.toml
crates/sap-automate-rag/src/: graph_layer.rs  lib.rs  rerank.rs
crates/sap-automate-rfc/: Cargo.toml
crates/sap-automate-rfc/src/: bapiret2.rs  client.rs  credentials.rs  error.rs  lib.rs  metadata_cache.rs  odata.rs  pool.rs  retry.rs  soap.rs  transaction.rs
crates/sap-automate-scheduler/: Cargo.toml
crates/sap-automate-scheduler/src/: lib.rs
crates/sap-automate-skills/: Cargo.toml
crates/sap-automate-skills/src/: lib.rs
deploy/: .dockerignore  Dockerfile  sap-automate-destination.example.toml
deploy/grafana/: sap-automate-overview.json
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.example.yaml  service.yaml
docs/: COMPARISON.md  INTEGRATION.md  PRODUCTION_PLAN.md  ROADMAP.md  RUNBOOK_DEV_TENANT.md  SAP_CORRECTNESS.md  tui-rag-tab.html
docs/sample-help-corpus/: fi-period-close.html  hcm-payroll.html  mm-goods-movement.html  sd-billing.html
skills/: abap-code-review.md  aipnv-ai-pairing.md  bw-to-datasphere-migration.md  clean-core-audit.md  customer-master-elicit.md  karpathy-guidelines.md  odata-service-design.md  period-close-investigation.md  po-creation-elicit.md  rap-service-scaffolding.md  security-sod-audit.md  transport-impact-analysis.md  transport-release-elicit.md
