[workspace]
resolver = "2"
members = [
    "crates/mcp-core",
    "crates/mcp-transport",
    "crates/mcp-server",
    "crates/mcp-client",
    "crates/sap-automate-kb",
    "crates/sap-automate-rag",
    "crates/sap-automate-connectors",
    "crates/sap-automate-skills",
    "crates/sap-automate-memory",
    "crates/sap-automate-ingest",
    "crates/sap-automate-rfc",
    "crates/sap-automate-adt",
    "crates/sap-automate-graph",
    "apps/sap-automate-server",
    "apps/sap-automate-ingest",
    "apps/sap-automate-bench",
    "apps/sap-automate-tui",
    "apps/sample-server",
    "apps/sample-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/rismanmattotorang/sap-automate"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / utility
thiserror = "1"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internal crates
mcp-core = { path = "crates/mcp-core" }
mcp-transport = { path = "crates/mcp-transport" }
mcp-server = { path = "crates/mcp-server" }
mcp-client = { path = "crates/mcp-client" }
sap-automate-kb = { path = "crates/sap-automate-kb" }
sap-automate-rag = { path = "crates/sap-automate-rag" }
sap-automate-connectors = { path = "crates/sap-automate-connectors" }
sap-automate-skills = { path = "crates/sap-automate-skills" }
sap-automate-memory = { path = "crates/sap-automate-memory" }
sap-automate-ingest = { path = "crates/sap-automate-ingest" }
sap-automate-rfc = { path = "crates/sap-automate-rfc" }
sap-automate-adt = { path = "crates/sap-automate-adt" }
sap-automate-graph = { path = "crates/sap-automate-graph" }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
quick-xml = { version = "0.36", features = ["serialize"] }
toml = "0.8"
ratatui = "0.28"
crossterm = "0.28"

# HTTP / web (Phase 1A)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"
scraper = "0.20"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
