[package]
name = "sap-automate-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phase 3 acceptance harness: P50/P95/P99 latency over the pilot corpus."

[[bin]]
name = "sap-automate-bench"
path = "src/main.rs"

[dependencies]
sap-automate-kb = { workspace = true }
sap-automate-rag = { workspace = true }
sap-automate-ingest = { workspace = true }
sap-automate-graph = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
