[package]
name = "sap-automate-ingest-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SAP-Automate ingestion CLI (Phase 1A)."

[[bin]]
name = "sap-automate-ingest"
path = "src/main.rs"

[dependencies]
sap-automate-kb = { workspace = true, features = ["qdrant"] }
sap-automate-ingest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
