[package]
name = "sap-automate-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SAP-Automate MCP server binary (Phase 1)."

[lib]
name = "sap_automate_server_lib"
path = "src/lib.rs"

[[bin]]
name = "sap-automate-server"
path = "src/main.rs"

[dependencies]
mcp-core = { workspace = true }
mcp-server = { workspace = true }
mcp-transport = { workspace = true, features = ["http"] }
sap-automate-kb = { workspace = true }
sap-automate-rag = { workspace = true }
sap-automate-ingest = { workspace = true }
sap-automate-rfc = { workspace = true, features = ["odata", "soap"] }
# `http` enables the live HttpAdtClient + destination TOML loader.  The
# binary already links reqwest (via rfc/odata + mcp-transport/http), so this
# adds no meaningful dependency surface and keeps the live-wiring code under
# CI/clippy coverage.  Runtime still defaults to the offline mock unless
# --destination selects a real SAP system.
sap-automate-adt = { workspace = true, features = ["http"] }
sap-automate-skills = { workspace = true }
sap-automate-graph = { workspace = true }
sap-automate-observability = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
mcp-client = { workspace = true }
mcp-transport = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
