[package]
name = "mcp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP transports: stdio (now), HTTP+SSE and Streaming HTTP (later)."

[dependencies]
mcp-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[features]
default = []
http = []
