[package]
name = "mcp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP transports: stdio (now), HTTP+SSE and Streaming HTTP (later)."

[dependencies]
mcp-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

[features]
default = []
http = ["axum", "tower-http"]

[dev-dependencies]
mcp-core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
