[package]
name = "sap-automate-adt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SAP-Automate ABAP Development Tools (ADT) REST client + mock implementation."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, optional = true }
url = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
default = []
http = ["reqwest", "url", "quick-xml", "toml"]

[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

[[test]]
name = "http_integration"
required-features = ["http"]
