[package]
name = "sap-automate-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phase 8 multi-channel gateway: Teams / Slack / Telegram / WhatsApp / Email / CLI adapters (paper §IX-B P1)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
