[package]
name = "sap-automate-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SAP-Automate connectors: ADT (ABAP), Signavio (BPMN), LeanIX (EAM)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
