[package]
name = "sap-automate-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SAP-Automate cross-domain knowledge graph: entities, edges, communities, Personalised PageRank, RAPTOR trees."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
