[package]
name = "sap-automate-kb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SAP-Automate knowledge base: Qdrant/Postgres/ArangoDB clients and document schema."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
