[package]
name = "sap-automate-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Observability primitives: Prometheus metrics, OpenTelemetry tracing scaffolding, audit log."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
