[package]
name = "sap-automate-rfc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SAP-Automate RFC + Table client abstraction with pooling, retry, circuit-breaker, and credential layering (Phase 2)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
