[package]
name = "sap-automate-rfc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SAP-Automate RFC + Table client abstraction with pooling, retry, circuit-breaker, and credential layering (Phase 2)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }

[features]
default = []
# Enables the SAP S/4HANA OData v4 client (Business Accelerator Hub sandbox
# + on-prem OData destinations).  Pulls in reqwest.
odata = ["reqwest"]
# Enables the SOAP RFC client (RFC_READ_TABLE / RFC_SYSTEM_INFO / generic
# RFC over /sap/bc/soap/rfc) — the real RFC path without the NW RFC SDK.
soap = ["reqwest", "quick-xml"]

[dev-dependencies]
tokio = { workspace = true }
