[package]
name = "sap-automate-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phase 8: proactive scheduler for declared SAP monitoring jobs (paper §IX-B P4)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
