[package]
name = "sap-automate-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SAP-Automate skills library — declarative workflow templates loaded as MCP prompts."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
